terminology tweaking in §10, logical truth/falsehood/equivalence, and downstream consequences

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -232,7 +232,7 @@ A conditional will usually be the natural connective to use with a universal qua
 	\factoidbox{
 		A sentence can be symbolised as $\exists x (\meta{F}x \eand \meta{G}x)$ if it can be paraphrased in English as `some F is G'.
 	}		
-Sentence \ref{quan3} can be paraphrased as, `It is not the case that every coin on the table is a dollar'. So we can symbolise it by `$\enot \forall x(Tx \eif Dx)$'. You might look at sentence \ref{quan3} and paraphrase it instead as, `Some coin on the table is not a dollar'. You would then symbolise it by `$\exists x(Tx \eand \enot Dx)$'. Although it is probably not immediately obvious yet, these two sentences are logically equivalent. (This is due to the logical equivalence between $\enot\forall x\meta{A}$ and $\exists x\enot\meta{A}$, mentioned in §\ref{s:FOLBuildingBlocks}, along with the equivalence between $\enot(\meta{A}\eif\meta{B})$ and $\meta{A}\eand\enot\meta{B}$.)
+Sentence \ref{quan3} can be paraphrased as, `It is not the case that every coin on the table is a dollar'. So we can symbolise it by `$\enot \forall x(Tx \eif Dx)$'. You might look at sentence \ref{quan3} and paraphrase it instead as, `Some coin on the table is not a dollar'. You would then symbolise it by `$\exists x(Tx \eand \enot Dx)$'. Although it is probably not immediately obvious yet, these two sentences are logically equivalent. (This is due to the logical equivalence between $\enot\forall x\meta{A}$ and $\exists x\enot\meta{A}$, mentioned in §\ref{s:FOLBuildingBlocks}, along with the logical equivalence between $\enot(\meta{A}\eif\meta{B})$ and $\meta{A}\eand\enot\meta{B}$.)
 
 Sentence \ref{quan4} can be paraphrased as, `It is not the case that there is some dollar in my pocket'. This can be symbolised by `$\enot\exists x(Px \eand Dx)$'. It might also be paraphrased as, `Everything in my pocket is a non-dollar', and then could be symbolised by `$\forall x(Px \eif \enot Dx)$'. Again the two symbolisations are logically equivalent. Both are correct symbolisations of sentence \ref{quan4}.
 
@@ -929,7 +929,7 @@ Sentence \ref{else4} can be treated similarly. But there is one subtlety here. D
 
 Return to our argument from premises \ref{hikaru1} and \ref{hikaru2}. We now symbolise it: $\forall y (p≠y \eif Opy); h≠p \ttherefore Oph$. This argument is valid. Given the fixed interpretation we have assigned to `$=$', it is not possible that a first thing be not identical to a second, while the second is identical to the first. So we can conclude, as a matter of logical alone, that $h≠p$ is equivalent to $p≠h$. 
 
-This argument rests on one of the logical principles governing identity: that it is \define{symmetric}, so that $\meta{x}=\meta{y}$ is equivalent to $\meta{y}=\meta{x}$. There are other logical principles of identity too. Everything is itself, and not another thing. So everything has the `relation' of identity to itself: $\meta{x}=\meta{x}$ is always true, no matter what name we substitute for \meta{x}. This is known as \define{reflexivity} of identity. Finally,
+This argument rests on one of the logical principles governing identity: that it is \define{symmetric}, so that $\meta{x}=\meta{y}$ is logically equivalent to $\meta{y}=\meta{x}$. There are other logical principles of identity too. Everything is itself, and not another thing. So everything has the `relation' of identity to itself: $\meta{x}=\meta{x}$ is always true, no matter what name we substitute for \meta{x}. This is known as \define{reflexivity} of identity. Finally,
 if \meta{x} is identical to \meta{y}, and \meta{y} identical to \meta{z}, then it follows that $\meta{x}=\meta{z}$. Logicians call this feature of a relation \define{transitivity}.
 
 The final principle about identity has its own name, \define{Leibniz' Law} (after the philosopher and mathematician Gottfried Leibniz): \factoidbox{If $\meta{x}=\meta{y}$ then for any property at all,  $\meta{x}$ has it iff $\meta{y}$ has it too. That is: every instance of this schematic sentence of \FOL, for any predicate $\meta{F}$ whatsoever, is true: $$\forall x \forall y \bigl(x=y \eif (\meta{F}x \eiff \meta{F}y) \bigr).$$} 
@@ -1096,7 +1096,7 @@ Definite descriptions should be contrasted with \emph{indefinite} descriptions, 
 
 
 \section{Treating definite descriptions as terms}
-One option would be to introduce new names whenever we come across a definite description. This is not a great idea. We know that \emph{the} traitor – whoever it is – is indeed \emph{a} traitor. We want to preserve that information in our symbolisation. So the symbolisation of `The traitor is a traitor' should be a tautology. But if we symbolise `the traitor' by a name $a$, the symbolisation will be $Ta$, which is not a tautology.
+One option would be to introduce new names whenever we come across a definite description. This is not a great idea. We know that \emph{the} traitor – whoever it is – is indeed \emph{a} traitor. We want to preserve that information in our symbolisation. So the symbolisation of `The traitor is a traitor' should be a logical truth. But if we symbolise `the traitor' by a name $a$, the symbolisation will be $Ta$, which is not a logical truth.
 
 A second option would be to use a \emph{new} definite description operator, such as `$\maththe$'. The idea would be to symbolise `the F' as `$\maththe xFx$'. This is read something like: `the thing such that it is F', though any complex expression with the variable $x$ would work. Expression of the form $\maththe \meta{x} \meta{A}\meta{x}$ would then behave, grammatically speaking, like names. If we followed this path, then using the following symbolisation key:
 	\begin{ekey}
@@ -1109,7 +1109,7 @@ A second option would be to use a \emph{new} definite description operator, such
 	\end{ekey}
 We could symbolise sentence \ref{traitor1} with `$\maththe x Tx = n$', sentence \ref{traitor2} with `$C\maththe xTx$', sentence \ref{traitor3} with `$\maththe x Tx = \maththe x Dx$', and sentence \ref{traitor4} with `$\maththe x Tx = \maththe x (Cx \wedge \forall y((Cy \wedge x≠y) \to Sxy))$'. This last example may be a bit tricky to parse. In semi-formal English, it says (supposing a domain of persons): `the unique person such that they are a traitor is identical with the unique person such that they went to Cambridge and they are shorter than anyone else who went to Cambridge'. 
 
-However, even adding this new symbol to our language doesn't quite help with our initial complaint, since it is not self-evident that the symbolisation of `The traitor is a traitor' as `$T\maththe x Tx$' yields a tautology. Moreover, it would be nice if we didn't have to add a new symbol to \FOL. And indeed, we might be able to make do without one.
+However, even adding this new symbol to our language doesn't quite help with our initial complaint, since it is not self-evident that the symbolisation of `The traitor is a traitor' as `$T\maththe x Tx$' yields a logical truth. Moreover, it would be nice if we didn't have to add a new symbol to \FOL. And indeed, we might be able to make do without one.
 
 \section{Russell's paraphrase}
 Bertrand Russell offered an influential account of definite descriptions that might serve our purposes. Very briefly put, he observed that, when we say `the \meta{F}', where that phrase is a definite description, our aim is to pick out the \emph{one and only} thing that is \meta{F} (in the appropriate context). Thus Russell offered a systematic paraphrase of sentences involving definite descriptions along these lines:\footnote{Bertrand Russell (1905) `On Denoting', \emph{Mind} \textbf{14}: 479–93; also Russell (1919) \emph{Introduction to Mathematical Philosophy}, London: Allen and Unwin, ch.\ 16.}
@@ -1417,7 +1417,7 @@ So we can graphically illustrate the scope of the quantifiers in the last two ex
 	$$\overbracket{\forall x \overbracket{\exists y (Fx \eiff \overbracket{\forall z (Gayz \eif Syzyayx)}^{\text{scope of `}\forall z\text{'}}}^{\text{scope of `}\exists y\text{'}})}^{\text{scope of `}\forall x\text{'}} \qquad\qquad 
 \overbracket{\forall x (Fx \to \overbracket{\exists x Gx}^{\text{scope of `$\exists x$'}})}^{\text{scope of `$\forall x$'}}	$$
 
-Note that it follows from our recursive definition that `$\forall x Fa$' is a formula. While puzzling on its face, with that quantifier governing no variable in its scope, it nevertheless is a formula of the language. It will turn out that, because the quantifier binds no variable in its scope, it is redundant; the formula `$\forall xFa$' is equivalent to `$Fa$'. Eliminating such formulae from the language involves greatly increased complication in the definition of a formula for no important gain.
+Note that it follows from our recursive definition that `$\forall x Fa$' is a formula. While puzzling on its face, with that quantifier governing no variable in its scope, it nevertheless is a formula of the language. It will turn out that, because the quantifier binds no variable in its scope, it is redundant; the formula `$\forall xFa$' is logically equivalent to `$Fa$'. Eliminating such formulae from the language involves greatly increased complication in the definition of a formula for no important gain.
 
 \section{Sentences}
 Recall that we are largely concerned in logic with assertoric sentences: sentences that can be either true or false. Many formulae are not sentences. Consider the following symbolisation key:
