--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -492,7 +492,7 @@ In assessing whether an argument is conclusive, we care about what would be true
 		\item[\ex{Acontingent}] It is raining.
 		\item[\ex{Anecessity}] If it is raining, water is precipitating from the sky.
 		\item[\ex{imposs}] If something is green, it is colourless.
-		\item[\ex{Atautology}] Either it is raining here, or it is not.
+		\item[\ex{Alogical truth}] Either it is raining here, or it is not.
 		\item[\ex{Acontradiction}] It is both raining here and not raining here.
 	\end{earg}
 In order to know if sentence \ref{Acontingent} is true, you would need to look outside or check the weather channel. It might be true; it might be false.
@@ -501,7 +501,7 @@ Sentence \ref{Anecessity} is different. You do not need to look outside to know 
 
 Sentence \ref{imposs} is a \define{necessary falsehood} or \define{impossibility}. Nothing is, or even could be, both green and colourless. We don't need to do any scientific or other investigation to know that \ref{imposs} is not and cannot be true.
 
-Sentence \ref{Atautology} is also a necessary truth. Unlike sentence \ref{Anecessity}, however, it is the structure of the sentence which makes it necessary. No matter what `raining here' means, `Either it is raining here or it is not raining here' will be true. The structure `\textsf{Either it is} … \textsf{or it is not} …', where both gaps (`…') are filled by the same phrase, must be a true sentence.
+Sentence \ref{Alogical truth} is also a necessary truth. Unlike sentence \ref{Anecessity}, however, it is the structure of the sentence which makes it necessary. No matter what `raining here' means, `Either it is raining here or it is not raining here' will be true. The structure `\textsf{Either it is} … \textsf{or it is not} …', where both gaps (`…') are filled by the same phrase, must be a true sentence.
 
 Equally, you do not need to check the weather, or even the meaning of words, to determine whether or not sentence \ref{Acontradiction} is true. It must be false, simply as a matter of structure. It might be raining here and not raining across town; it might be raining now but stop raining even as you finish this sentence; but it is impossible for it to be both raining and not raining in the same place and at the same time. So, whatever the world is like, it is not both raining here and not raining here. It is a \define{necessary falsehood}.
 
